fix(slider): change align style

--- a/packages/elemental-theme/src/custom-elements/ef-slider-marker.less
+++ b/packages/elemental-theme/src/custom-elements/ef-slider-marker.less
@@ -12,7 +12,7 @@
     transform: translateX(calc(-50% + @slider-step-width / 2));
   }
   &[label-align='right'] [part='label'] {
-    transform: translateX(calc(-90% + @slider-step-width / 2));
+    transform: translateX(calc(-95% + @slider-step-width / 2));
   }
   &[label-align='left'] [part='label'] {
     transform: none;
